...
  @override
  Widget build(BuildContext context) {
    return AnimatedBuilder(
      animation: hc,
      builder: (_, _) {
        return Scaffold(
          appBar: GlobalAppBar(title: 'Health'),
          // appBar: AppBar(
          //   title: const Text('Health'),
          //   actions: [
          //     if (Platform.isAndroid && hc.hcStatus != null)
          //       Padding(
          //         padding: const EdgeInsets.symmetric(horizontal: 12),
...
